--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,10 +20,10 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: Run tests
+    - name: Run tests (Successful by installing and then running tests)
       run: |
         docker run -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:$NIM_VERSION bash -c "nimble install -y; nimble test"
 
-    - name: Run tests
+    - name: Run tests (Fails on installing package with binary)
       run: |
         docker run -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:$NIM_VERSION bash -c "nimble test -y --verbose"
